--- a/app/views/problems/edit.html.erb
+++ b/app/views/problems/edit.html.erb
@@ -1,20 +1,11 @@
 <h1>Editing problem</h1>
 
-<% form_for(@problem) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
+<%  semantic_form_for(@problem) do |f| %>
+    <%= render(:partial => "problem", :object => @problem, :locals => {:read_only => false, :f => f }) %>    
+    <% f.buttons do %>
+      <%= f.commit_button  %>
+      <%= link_to 'Back', problems_path %>
+    <% end %>
 <% end %>
 
-<%= link_to 'Show', @problem %> |
-<%= link_to 'Back', problems_path %>
+
