--- a/app/views/references/new.html.erb
+++ b/app/views/references/new.html.erb
@@ -1,19 +1,10 @@
-<h1>New reference</h1>
+<h1>New Reference</h1>
 
-<% form_for(@reference) do |f| %>
-  <%= f.error_messages %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+<% semantic_form_for(@reference) do |f| %>
+    <%= render(:partial => "reference", :object => @reference, :locals => {:read_only => false, :f => f }) %>    
+    <% f.buttons do %>
+      <%= f.commit_button  %>
+      <%= link_to 'Back', references_path %>
+    <% end %>
 <% end %>
-
 <%= link_to 'Back', references_path %>
